NathalieMota/assets/css/styles.css
/**************************/
/******    GLOBAL    ******/
/**************************/
* 
{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/*
    Couleurs
*/

:root
{
    --color-dark-red: #E00000;
    --color-red: #FE5858;
    --color-light-red: #FFD6D6;
    --color-black: #000000;
    --color-dark-blue:#313144;
    --color-dark-gray: #C4C4C4;
    --color-gray: #D8D8D8;
    --color-light-gray: #E5E5E5;
    --color-white: #FFFFFF;  
    --color-form-gray: #B8BBC2;
    --color-blue: #215AFF;
}

/*
    BODY
*/

.no-scroll
{
    overflow: hidden;
}

/*
    Police d'écriture
*/
h1 
{
    font-family: 'Space mono';
    font-size: 96px;
    font-weight: 700;
    font-style: italic;
}

h2 
{
    font-family: 'Space mono';
    font-size: 66px;
    font-weight: 400;
    font-style: italic;
}

h3 
{
    font-family: 'Space mono';
    font-size: 18px;
    font-weight: 400;
}

.description-photo 
{
    font-family: 'Space mono';
    font-size: 14px;
    font-weight: 400; 
}

p 
{
    font-family: 'Poppins';
    font-size: 14px;
    font-weight: 300; 
}

/*
List et lien par défault
*/
li 
{
    text-decoration: none;
    display: inline-block;
}

a 
{
    text-decoration: none;
}




/****** HEADER ******/

.header-container {
    display: flex;
    height: 80px;
    justify-content: space-between;
    align-items: center;
}

.logo {
    margin-left: 146px;
}

.logo img {
    width: 216px;
    height: 14px;
}

.navigation {
    margin-right: 146px;
}

.navigation a {
    color: var(--color-black); 
    font-weight: 400;
    font-size: 16px;
    text-align: center; 
    text-transform: uppercase;
}

.navigation a:hover,
.navigation a:active {
    font-weight: 700;
}

#menu-menu-principal {
    display: flex;
    gap: 45px;
}

/****** BURGER MENU ******/
/* Bouton */
.menu-burger {
    display: none;
    position: absolute;
    right: 40px;
    width: 30px;
    cursor: pointer;
    border: none;
    background-color: var(--color-white);
}
/*
--> span représentant les lignes du menu burger
*/
.line {
    height: 2px;
    background-color: var(--color-black);
    display: block;
    margin: auto;
    margin-block: 6px;
    width: 27px;
}
/*
--> 1ere ligne
*/
.menu-burger .line__1 {
    position: relative;
    transform: translateY(0px) rotate(0deg);
    transition: 0.3s ease-in-out;
}
.menu-burger .line__1.animated {
    transform: translateY(8px) rotate(225deg);
    transition: 0.3s ease-in-out;
}
/*
--> 2ème ligne
*/
.menu-burger .line__2 {
    position: relative;
    transform: translateY(0px);
    opacity: 1;
    transition: 0.3s ease-in-out;
}
.menu-burger .line__2.animated {
    transform: translateY(8px);
    opacity: 0;
    transition: 0.3s ease-in-out;
}
/*
--> 3ème ligne
*/
.menu-burger .line__3 {
    position: relative;
    transform: translateY(0px) rotate(0deg);
    transition: 0.3s ease-in-out;
}
.menu-burger .line__3.animated {
    transform: translateY(-8px) rotate(135deg);
    transition: 0.3s ease-in-out;
}

/* Menu de navigation mobile */
.burger-open-menu {
    display: none;
}

#menu-menu-principal-1 {
    display: flex;
    flex-direction: column;
    gap: 50px;
}

#menu-menu-principal-1 li {
    text-align: center;
}

#menu-menu-principal-1 li a {
    font-family: 'Space mono';
    font-size: 44px;
    text-transform: uppercase;
    color: var(--color-white);
}

#menu-menu-principal-1 li a:hover {
    text-decoration: underline;
}

/****** FOOTER *******/

#footer {
    display: flex;
    align-items: center;
    justify-content: center;
   /* position: absolute;
    bottom: 0;*/
    width: 100%;
    height: 40px;
    border-top: 1px solid #000000;
}

.navigation-footer {
    display: flex;
    justify-content: center;
    gap: 90px;
}

#menu-menu-pied-de-page {
    display: flex;
    gap: 90px;
    flex-direction: row;
}

#menu-menu-pied-de-page a {
    color: var(--color-black); 
    font-weight: 400;
    font-size: 16px;
    text-align: center; 
    text-transform: uppercase;

}

#menu-menu-pied-de-page a:hover,
#menu-menu-pied-de-page a:active {
    font-weight: 700;
}

#footer span {
    color: var(--color-black);
    font-weight: 400;
    font-size: 16px;
    text-align: center; 
    text-transform: uppercase;
}

/****** Page de confidentialité ******/
h1.wp-block-heading {
    font-size: 52px;
    margin-bottom: 40px;
}

h2.wp-block-heading {
    font-size: 32px;
    margin-bottom: 30px;
}

p.has-text-align-center {
    margin: 0 30px 30px 30px;
}

/****** MOBILE ******/
/***** HEADER MOBILE ******/
@media(max-width: 967px) {
    .header-container {
        height: 75px;
    }  

    .logo {
        margin-left: 60px;
    }

    .navigation {
        margin-right: 60px;
    }
}

@media(max-width: 768px) {
    .header-container {
        height: 72px;
    } 

    .logo {
        margin-left: 40px;
    }

    .navigation {
        margin-right: 40px;
    }

    .logo img {
        width: 138px;
        height: 9px;
    }

    #menu-menu-principal {
        display: none;
    }


    
    /* Menu burger ( sous 768px il devient visible ) */
    .menu-burger {
        display: inline-block;
    }

    .burger-open-menu {
        display: flex;
        position: absolute;
        z-index: 20;
        width: 100%;
        height: calc(100vh - 72px);
        align-items: center;
        justify-content: center;
        background: red;
        opacity: 0;
        transform: translateX(100vw);
        transition: 0.7s ease-in-out;  
    }

    .burger-open-menu.actif {
        opacity: 1;
        transform: translateX(0);
        transition: 0.7s ease-in-out;  
    }
}



/****** FOOTER MOBILE ******/
@media(max-width: 768px) {
    #footer {
        height: 207px;
    }

    .navigation-footer {
        display: flex;
        flex-direction: column;
        gap: 24px;
    }

    #menu-menu-pied-de-page {
        display: flex;
        flex-direction: column;
        gap: 24px;
    }

    #menu-menu-pied-de-page li {
        text-align: center;
    }
}

